syntax ="proto2";

option java_multiple_files = true;
option java_package = "org.yutil.grpc.proto";
option java_outer_classname = "DemoeService";

package  DemoService;

//service define
service DemoService {

	rpc GetUser  (UserId) returns (User) {}
	
	rpc FindUserList (UserId) returns (stream User) {}
	
}

message UserId {
	optional sint64 id =1;
}

message User {
	optional sint64 id =1;
	optional string name = 2;
}

message UserList {
	optional User users = 1;
}